# dirdotenv

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dirdotenv/: __init__.py  __main__.py  cli.py  loader.py  parser.py
dirdotenv/hooks/: __init__.py  bash.sh  fish.fish  powershell.ps1  zsh.sh
shell_integration/: README.md  dirdotenv.bash  dirdotenv.fish  dirdotenv.zsh
tests/: test_cli.py  test_loader.py  test_parser.py
tests_integration/: Dockerfile  run_docker_tests.ps1  test_cli_hooks.py  test_file_change_detection.py  test_integrations.py  test_integrations_v2.py  test_powershell.py
