[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirdotenv"
version = "0.1.0"
description = "Like direnv, but works with both .envrc and .env files"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Alexey Grigorev"}
]

[project.scripts]
dirdotenv = "dirdotenv.cli:main"
